federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__planner_update.snap
---
source: router-bridge/src/planner.rs
expression: "&format!(\"{query_plan1:#?}\")"
---
PlanErrors {
    errors: [
        PlanError {
            message: Some(
                "Cannot query field \"body\" on type \"Review\".",
            ),
            extensions: Some(
                PlanErrorExtensions {
                    code: "GRAPHQL_VALIDATION_FAILED",
                    exception: None,
                },
            ),
            validation_error: true,
        },
    ],
    usage_reporting: UsageReporting {
        stats_report_key: "## GraphQLValidationFailure\n",
        referenced_fields_by_type: {},
    },
}
