federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__try_to_get_a_plan_for_a_subscription-2.snap
---
source: router-bridge/src/planner.rs
expression: payload.usage_reporting
---
{
  "statsReportKey": "# Subscription\nsubscription Subscription{aDieWasCreated{color roll sides}}",
  "referencedFieldsByType": {
    "Die": {
      "fieldNames": [
        "color",
        "roll",
        "sides"
      ],
      "isInterface": false
    },
    "Subscription": {
      "fieldNames": [
        "aDieWasCreated"
      ],
      "isInterface": false
    }
  }
}
